[tool.poetry]
name = "regtech-regex"
version = "0.1.0"
description = ""
authors = ["CFPB's RegTech Team"]
readme = "README.md"
packages = [
    { include = "regtech_regex", from = "src/python"},
    { include = "validations.yaml", from = "src"}
]
include = [
    {path = "src/validations.yaml"}
]

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[tool.poetry.group.linters.dependencies]
ruff = "^0.1.15"
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.build]

[tool.pytest.ini_options]
pythonpath = ["src/python"]
testpaths = ["src/python/tests"]
addopts = [
    "--cov-report=term-missing",
    "--cov-branch",
    "--cov-report=xml",
    "--cov-report=term",
    "--cov=regtech_regex",
    "-vv",
    "--strict-markers",
    "-rfE",
]

[tool.coverage.run]
relative_files = true
source = ["src/python/regtech_regex"]

[tool.coverage.report]
skip_empty = true