[project]
name = "regtech-regex"
version = "0.1.0"
description = ""
authors = [
    {name = "CFPB's RegTech Team"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml~=6.0.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
packages = ["src/python/regtech_regex"]

[tool.hatch.build.force-include]
"src/validations.yaml" = "regtech_regex/validations.yaml"


[tool.hatch.envs.test]
dependencies = [
    "pytest~=8.0.0",
    "pytest-cov~=5.0.0",
    "pytest-mock~=3.14.0"
]

[tool.hatch.envs.lint]
skip-install = true
dependencies = [
    "ruff~=0.1.15",
    "black~=24.1.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
pythonpath = ["src/python"]
testpaths = ["src/python/tests"]
addopts = [
    "--cov-report=term-missing",
    "--cov-branch",
    "--cov-report=xml",
    "--cov-report=term",
    "--cov=regtech_regex",
    "-vv",
    "--strict-markers",
    "-rfE",
]

[tool.coverage.run]
relative_files = true
source = ["src/python/regtech_regex"]

[tool.coverage.report]
skip_empty = true